fix: long plain note overflow issue

--- a/app/assets/stylesheets/_sn.scss
+++ b/app/assets/stylesheets/_sn.scss
@@ -929,3 +929,7 @@
 .bg-note-size-warning {
   background-color: rgba(235, 173, 0, 0.08);
 }
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
